fix: update features and styles to be aligned with the new UI of Beatport

--- a/src/assets/styles/content.scss
+++ b/src/assets/styles/content.scss
@@ -1,197 +1,10 @@
 @import './variables';
 
 .bp-ui-tweaks-extension {
-
-  .header-container {
-    z-index: 102;
-  }
-
-  .modal-target .modal.modal--entered{
-    z-index: 116;
-  }
-
-  &.bp-ui-tweak-sticky-list-headers {
-    .pjax-inner-wrapper {
-      overflow: unset;
-    }
-
-    .library-playlists__actions {
-      position: sticky;
-      top: 58px;
-      z-index: 100;
-      background: #333;;
-      margin: 0;
-      padding: 10px;
-      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    }
-
-    .modal-target {
-      .library-playlists__actions {
-        top: 0;
-      }
-    }
-
-    .pagination-container.pagination-top-container {
-      display: flex;
-      position: sticky;
-      top: 55px;
-      margin: 0;
-      padding: 15px 0 5px;
-      background: #252525;
-      z-index: 101;
-      justify-content: space-between;
-
-      .pag-jump-to-container,
-      .pag-results-per-container {
-        position: static;
-      }
-
-      .pag-num-list-container {
-        border: 0;
-      }
-    }
-  }
-
   &.bp-ui-tweak-highlight-list-element {
-    .bucket.tracks,
-    .horz-releases {
-      .bucket-items {
-        .bucket-item,
-        .bucket-item.track {
-          &.bucket-item__active {
-            position: relative;
-            background: #262626;
-
-            &::after {
-              display: block;
-              position: absolute;
-              content: '';
-              width: 100%;
-              height: 100%;
-              border: 1px solid $green;
-              pointer-events: none;
-              box-sizing: border-box;
-              z-index: 1;
-            }
-          }
-
-          &:hover {
-            background: #262626;
-          }
-        }
-      }
-    }
-  }
-
-  &.bp-ui-tweak-dense-layout {
-    .bucket.tracks,
-    .horz-releases {
-      .bucket-horz-release-header {
-        display: flex;
-        box-sizing: border-box;
-
-        @media screen and (max-width: 1149px) {
-          display: none;
-        }
-      }
-
-      .bucket-items {
-        .bucket-item.horz-release {
-          display: flex;
-          box-sizing: border-box;
-
-          .horz-release-artwork-parent a {
-            img.horz-release-artwork {
-              width: 40px;
-              height: 40px;
-            }
-
-            .horz-release-bucket-exclusive-marker {
-              width: 40px;
-              font-size: 5px;
-              left: 0;
-            }
-          }
-
-          .horz-release-meta-parent {
-            position: relative;
-            margin: 0;
-
-            .horz-release-meta {
-              display: flex;
-              align-items: center;
-            }
-
-            .horz-release-actions-parent {
-              display: flex;
-              align-items: center;
-              position: absolute;
-              width: 100%;
-              height: 100%;
-              top: 0;
-              left: 0;
-
-              .horz-release-actions {
-                position: relative;
-
-                .horz-release-play-queue {
-                  text-align: left;
-
-                  button {
-                    padding: 0;
-                    margin: 0 0 0 10px;
-                  }
-                }
-              }
-            }
-          }
-
-          @media screen and (max-width: 1149px) {
-            &.opened-actions:is(li) {
-              .horz-release-meta-parent {
-                .horz-release-actions-parent {
-                  height: 159px;
-                }
-
-                .horz-release-actions {
-                  top: 35px;
-                  height: 85px;
-                }
-              }
-            }
-
-            .horz-release-meta-parent {
-              display: flex;
-              width: 100%;
-              flex-direction: column;
-
-              .horz-release-meta {
-                flex-direction: column;
-                align-items: flex-start;
-              }
-
-              .horz-release-actions-parent {
-                position: relative;
-                margin-left: -40px;
-                width: calc(100% + 40px);
-
-                .horz-release-actions {
-                  position: absolute;
-                  flex-direction: row;
-                  height: 139px;
-                  top: 139px;
-                  align-items: center;
-
-                  .horz-release-ellipsis {
-                    margin: 0;
-                    border: 0;
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
+    .row.current,
+    .row.row__active {
+      border: 1px solid $green;
     }
   }
 }
